Fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ input {
     font-size: 50px;
 }
 
+.landing-section {
+    justify-content: space-between;
+}
 .landing-bg-image {
     background-image: url("https://images.unsplash.com/photo-1543342824-0f06879b0b0a?q=80&w=2674&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     min-height: 50dhv;
@@ -51,14 +54,14 @@ input {
 .feature-card {
     background-color: aliceblue;
     position: absolute;
+    top: 800px;
     right: 40px;
     line-height: 3em;
 }
 
 .cat-yoga-img {
-    height: 30em;
+    height: 26em;
     aspect-ratio: 1/1;
-    margin-left: 1.5em;
     margin-top: 2em;
     margin-bottom: 2em;
     /*
@@ -67,9 +70,13 @@ input {
 }
 
 .signup-section {
+    justify-content: space-around;
+    align-items: center;
+    /* fixing with Bootstrap grid 
 
     margin-top: 12.5em;
     margin-left: 5em;
+    */
 }
 
 .review-card-section {
